User module more endpoints